Fixing alignment bug.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
      font-size: 62%;
  }
 
- body {
+ .container {
+     width: 100%;
      overflow-x: hidden;
  }
 
